# transcriber

./: .env.example  .gitignore  .lintstagedrc.json  .mcp.json  .prettierignore  .prettierrc.json  .stylelintrc  .stylelintrc.cjs  AGENTS.md  CHANGELOG.md  README.md  THIRD_PARTY_NOTICES.md  Whisper_Tokenizer.ipynb  eslint.config.js  package-lock.json  package.json  stable.json  tsconfig.app.json  tsconfig.node.json  unstable.json  vite.config.ts
.github/workflows/: release.yml
.husky/: pre-commit
.storybook/: main.ts  preview.tsx
docs/: after-work-checks.md  command-execution.md  encoding.md  model-testing.md  screenshot-testing.md  scss-style-rules.md
docs/agent/: after-work-checks.md  classname-rules.md  command-execution.md  component-structure.md  development-docs-maintenance.md  encoding.md  file-structure.md  functional-spec-maintenance.md  markdown-style-rules.md  multi-agent-workflow.md  planning.md  screenshot-testing.md  scss-style-rules.md  third-party-notices.md
docs/development/: alt-menu-key.md  cancel-hotkey.md  clipboard-restore.md  config-error-notifications.md  debug-logging.md  hotkeys.md  index.md  media-pause.md  model-testing.md  pause-hotkey.md  processing-timings.md  recording-prewarm.md  release-pipeline.md  resettable-default-fields.md  state-management.md  storage-migrations.md  tray-window-toggle.md
docs/functional-spec/: dictation.md  dictionary.md  errors-and-limits.md  history.md  index.md  settings-and-providers.md
resources/: promps.json
scripts/: build-canary.mjs  check-encoding.mjs  extract-changelog.mjs  powershell-utf8.cmd  set-version.mjs
scripts/model-testing/: cases.json  models.json  post-process-prompts.json  provider-rules.json  report.mjs  run.mjs
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.canary.conf.json  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/i18n/en/: backend.ftl
src-tauri/i18n/ru/: backend.ftl
src-tauri/icons/: icon.icns
src-tauri/icons-canary/: icon.icns
src-tauri/icons-dev/: icon.icns
src-tauri/src/: audio_mute.rs  autostart.rs  background.rs  catalog.rs  db.rs  debug_log.rs  dictation.rs  dictionary.rs  error.rs  history.rs  http.rs  i18n.rs  keyboard.rs  lib.rs  main.rs  maintenance.rs  media_control.rs  metrics.rs  migrations.rs  notification.rs  overlay.rs  processing.rs  providers.rs  recording.rs  runner.rs  settings.rs  shortcut_hook.rs  storage.rs  stt_prompt.rs  telemetry.rs  updater.rs
src/app/: RootLayout.module.scss  RootLayout.tsx  catalogContext.ts  createUpdateNotificationArgs.test.tsx  createUpdateNotificationArgs.tsx  processingContext.ts  providersContext.ts  router.tsx  settingsContext.ts  themeContext.ts
src/app/AppSettingsModal/: AppSettingsModal.module.scss  AppSettingsModal.tsx  constants.ts  index.ts  types.ts
src/app/AppSettingsProvider/: AppSettingsProvider.tsx  index.ts
src/app/AppThemeProvider/: AppThemeProvider.tsx
src/app/ApplicationErrorBoundary/: ApplicationErrorBoundary.module.scss  ApplicationErrorBoundary.tsx  index.ts
src/app/CatalogProvider/: CatalogProvider.tsx  index.ts
src/mocks/: history.ts  providers.ts
src/models/: Catalog.ts  History.ts  Processing.ts  Provider.ts  Settings.ts
src/overlay/: index.html  main.tsx  styles.scss  types.ts
src/pages/: AboutPage.tsx  HomePage.module.scss  HomePage.tsx  NotFoundPage.tsx
src/shared/: catalogApi.ts  dictationApi.ts  dictionaryApi.ts  historyApi.ts  hotkeyCaptureLock.ts  maintenanceApi.ts  processingApi.ts  providersApi.ts  routes.ts  settingsApi.ts  telemetry.ts  updaterApi.ts
src/stores/: catalogStore.ts  dictionaryStore.ts  historyStore.ts  index.ts  processingStore.ts  providersStore.ts  settingsStore.ts  uiStore.test.ts  uiStore.ts  updaterStore.test.ts  updaterStore.ts
src/styles/: global.scss
todo/: model-testing.md
(+124 files in other folders)
