[package]
name = "transcriber"
version = "0.1.0"
description = "Transcriber desktop application"
authors = ["Transcriber"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["clock", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sys-locale = "0.3"
tauri = { version = "2", default-features = false, features = [
    "common-controls-v6",
    "dbus",
    "dynamic-acl",
    "wry",
    "x11",
] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
