[package]
name = "transcriber"
version = "0.1.0"
description = "Transcriber desktop application"
authors = ["Transcriber"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["clock", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sys-locale = "0.3"
cpal = "0.16"
hound = "3"
raw-window-handle = "0.6"
tauri = { version = "2", default-features = false, features = [
    "common-controls-v6",
    "dbus",
    "dynamic-acl",
    "tray-icon",
    "wry",
    "x11",
] }
thiserror = "2"
tokio = { version = "1", features = ["time"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
windows = { version = "0.61", features = [
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
] }
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

tauri-plugin-single-instance = "2"

[target.'cfg(windows)'.dependencies]
tauri-plugin-updater = "2"
tauri-winrt-notification = "0.7.3"
