[package]
name = "transcriber"
version = "0.1.0"
description = "Transcriber desktop application"
authors = ["Transcriber"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["clock", "serde"] }
base64 = "0.22"
cpal = "0.16"
hound = "3"
i18n-embed = { version = "0.16", features = ["fluent-system"] }
raw-window-handle = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rustc-hash = "1.1"
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sys-locale = "0.3"
tauri = { version = "2", default-features = false, features = [
    "common-controls-v6",
    "dbus",
    "dynamic-acl",
    "tray-icon",
    "wry",
    "x11",
] }
thiserror = "2"
tiktoken-rs = "0.9"
tokio = { version = "1", features = ["time"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
windows = { version = "0.61", features = [
    "Media_Control",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_UI_Shell",
] }
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

tauri-plugin-single-instance = "2"

[target.'cfg(windows)'.dependencies]
clipboard-win = "5"
tauri-plugin-updater = "2"
tauri-winrt-notification = "0.7.3"
